--- a/app/src/main/res/menu/top_menu.xml
+++ b/app/src/main/res/menu/top_menu.xml
@@ -1,12 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
 
     <item
-        android:id="@+id/SideMenu"
-        android:icon="@drawable/ic_baseline_menu_24"
-        android:title="SideMenu"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/menu_homepage"
+        android:icon="@drawable/ic_home"
+        android:title="@string/menu_homepage" />
+    <item
+        android:id="@+id/menu_recommendation"
+        android:icon="@drawable/chat"
+        android:title="@string/menu_recommendation" />
+    <item
+        android:id="@+id/menu_mealPlan"
+        android:icon="@drawable/dinner"
+        android:title="@string/menu_mealPlan" />
+
+    <item
+        android:id="@+id/menu_menu"
+        android:icon="@drawable/menu"
+        android:title="@string/menu_menu" />
+    <item
+        android:id="@+id/menu_cart"
+        android:icon="@drawable/cart"
+        android:title="@string/menu_cart" />
+    <item android:title="">
+        <menu>
+            <item
+                android:id="@+id/user_profile"
+                android:icon="@drawable/ic_baseline_account_circle_24"
+                android:title="@string/profile" />
+            <item
+                android:id="@+id/logout"
+                android:icon="@drawable/ic_baseline_login_24"
+                android:title="@string/signout" />
+        </menu>
+    </item>
 
 
 </menu>
