--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -8,7 +8,7 @@
     android:layout_marginTop="16dp"
     android:layout_marginStart="16dp"
     android:background="@color/white"
-    tools:context=".MainActivity">
+    tools:context=".NavHeader">
 
     <TextView
         android:id="@+id/user_name"
